--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  photo_view: ^0.15.0
+  cached_network_image: ^3.4.1
+  get: ^4.7.3
+  firebase_core: ^4.2.1
 
 dev_dependencies:
   flutter_test:
